src/test/examples/custom/valid/class/canCallOtherClassFunctionsInsideSameClass.wacc
# Class functions can be called inside other class functions
# Expected output:
# 8

begin
  class H is 
    public int v
    private int J(int i) is 
      return i
    end
    public int f() is 
       int k = call J(5) ;
       v = k+3 ;
       return v
    end
  end
  int f() is 
    return 0
  end
  H v = new H(2) ; 
  int k = call v.f() ; 
  println k
end