src/test/examples/custom/invalid/semanticErr/class/failsToMakeNewInstanceOfUndefinedClass.wacc
# Cannot make new instance of an undefined class

begin
  class H is 
    private int v
    H(int v) 
    end
    private int J(int v) is 
      return 0
    end
    private int f() is 
       v = 3 ;
       return v
    end
  end
  int f() is 
    return 0
  end
  int v = new G() 
end